--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <script src='http://maps.google.com/maps/api/js?sensor=true' type='text/javascript'></script>
   <script src='script/geo_map.js' type='text/javascript'></script>
   <script src='script/geo_tracker.js' type='text/javascript'></script>
+  <script src='script/audio_drop.js' type='text/javascript'></script>
   <script src='script/audio-map.js' type='text/javascript'></script>
 </head>
 <body onload='initialize_map()'>
@@ -16,4 +17,5 @@
       Drop a pin somewhere to add a track to that location
     </p>
   </div>
+  <audio></audio>
 </body>
