--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <title>Audio Map</title>
   <link href='style/audio-map.css' rel='stylesheet' type='text/css' />
   <script src='script/jquery-1.7.1.min.js' type='text/javascript'></script>
-  <script src='http://maps.google.com/maps/api/js?sensor=true' type='text/javascript'></script>
+  <script src='http://maps.google.com/maps/api/js?libraries=geometry&amp;sensor=true' type='text/javascript'></script>
   <script src='script/geo_map.js' type='text/javascript'></script>
   <script src='script/geo_tracker.js' type='text/javascript'></script>
   <script src='script/audio_drop.js' type='text/javascript'></script>
@@ -14,8 +14,10 @@
   <div id='map_canvas' style='width: 100%; height: 100%'></div>
   <div id='overlay'>
     <p>
-      Drop a pin somewhere to add a track to that location
+      Click somewhere on the map to drop the soundbyte on that location
     </p>
+    <label for='radius'>Radius (in meters)</label>
+    <input id='radius' name='radius' type='number' value='5' />
   </div>
   <audio></audio>
 </body>
