--- a/app/index.html
+++ b/app/index.html
@@ -19,5 +19,5 @@
     <label for='radius'>Radius (in meters)</label>
     <input id='radius' name='radius' type='number' value='5' />
   </div>
-  <audio></audio>
+  <audio id='example_sound' preload='auto' src='audio/gimme_danger.mp3'></audio>
 </body>
