--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
-  <meta content='initial-scale=1.0, user-scalable=no' name='viewport' />
+  <meta content='width=device-width; height=device-height; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' name='viewport' />
+  <meta content='yes' name='apple-mobile-web-app-capable' />
+  <meta content='yes' name='apple-touch-fullscreen' />
+  <meta content='black' name='apple-mobile-web-app-status-bar-style' />
   <title>Audio Map</title>
   <link href='style/audio-map.css' rel='stylesheet' type='text/css' />
   <script src='script/jquery-1.7.1.min.js' type='text/javascript'></script>
@@ -14,7 +17,7 @@
   <div id='map_canvas' style='width: 100%; height: 100%'></div>
   <div id='overlay'>
     <p>
-      Click somewhere on the map to drop the soundbyte on that location
+      Tap a place on the map to drop the song there
     </p>
     <label for='radius'>Radius (in meters)</label>
     <input id='radius' name='radius' type='number' value='5' />
