--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,9 @@
     </p>
     <label for='radius'>Radius (in meters)</label>
     <input id='radius' name='radius' type='number' value='5' />
+    <p id='audio_kick'>
+      <a href='#' id='play_audio'>Kick audio engine</a>
+    </p>
   </div>
   <audio id='example_sound' preload='auto' src='audio/gimme_danger.mp3'></audio>
 </body>
